@@ -12,6 +12,7 @@ CartoWeb HEAD
 - LayerOverlay accepts 'filter' and 'filteritem' attributes (patch from Dirk Jesko)
 - Added 'db_direct' method to store accounting information
 - Added free (user) scale input in location coreplugin
+- Added 'bboxHistory' plugin: allows the user to navigate through bbox history.
 
 2006-08-31: CartoWeb 3.3.0
 ==========================
